--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,4 @@
 language: objective-c
-osx_image: xcode8.3
 sudo: false
 
 # Only do a shallow clone of our Git repo.
@@ -20,6 +19,9 @@ env:
   - LC_CTYPE=en_US.UTF-8
   - LANG=en_US.UTF-8
   matrix:
+    include:
+      - osx_image: xcode8.3
+      - osx_image: xcode9
     # The iPhone 7 Plus was chosen because it is a device with a 3x screen and also changes
     # its size category trait on rotation.
     # 10.3 was chosen a the latest generally available iOS version.
