--- a/components/Palettes/BUILD
+++ b/components/Palettes/BUILD
@@ -1,4 +1,4 @@
-# Copyright 2017-present The Material Foundation Authors. All Rights Reserved.
+# Copyright 2017-present The Material Components for iOS Authors. All Rights Reserved.
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
@@ -45,6 +45,7 @@ swift_library(
 objc_library(
     name = "UnitTestsLib",
     srcs = glob([
+        "tests/unit/*.h",
         "tests/unit/*.m",
     ]),
     deps = [":Palettes"],
