Standardize build files.

--- a/components/AnimationTiming/BUILD
+++ b/components/AnimationTiming/BUILD
@@ -12,7 +12,9 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-load("//:material_components_ios.bzl", "mdc_public_objc_library")
+load("//:material_components_ios.bzl",
+     "mdc_public_objc_library",
+     "mdc_objc_library")
 load("@build_bazel_rules_apple//apple:swift.bzl", "swift_library")
 load("@build_bazel_rules_apple//apple:ios.bzl", "ios_unit_test")
 
@@ -22,22 +24,23 @@ mdc_public_objc_library(
     name = "AnimationTiming",
 )
 
-objc_library(
-    name = "UnitTestsLib",
-    srcs = glob([
-        "tests/unit/*.h",
-        "tests/unit/*.m",
-    ]),
+mdc_objc_library(
+    name = "unit_test_sources",
+    srcs = glob(["tests/unit/*.m"]),
+    hdrs = glob(["tests/unit/*.h"]),
+    sdk_frameworks = [
+        "UIKit",
+        "XCTest",
+    ],
     deps = [":AnimationTiming"],
     visibility = ["//visibility:private"],
 )
 
 ios_unit_test(
-    name = "UnitTests",
+    name = "unit_tests",
     deps = [
-      ":UnitTestsLib",
+      ":unit_test_sources",
     ],
     minimum_os_version = "8.0",
-    timeout = "short",
     visibility = ["//visibility:private"],
 )
