[Catalog] Moved Objective C code for catalog into a pod spec.
This is so we can remove MDCCatalogTiles from the bridging header.
Internal tools do not support bridging headers.

--- a/catalog/Podfile
+++ b/catalog/Podfile
@@ -7,6 +7,7 @@ target "MDCCatalog" do
   pod 'MaterialComponentsExamples', :path => '../'
   pod 'MaterialComponents', :path => '../'
   pod 'CatalogByConvention'
+  pod 'MDCCatalogObjectiveC', :path => 'MDCCatalogObjectiveC/'
 
   use_frameworks!
 end
