--- a/catalog/Podfile
+++ b/catalog/Podfile
@@ -8,6 +8,7 @@ target "MDCCatalog" do
   pod 'MaterialComponents', :path => '../'
   pod 'CatalogByConvention'
   pod 'MaterialCatalog', :path => 'MaterialCatalog/'
+  pod 'MotionTransitioning', :path => '../../odeon/motion-transitioning-objc/'
 
   use_frameworks!
 end
