--- a/.travis.yml
+++ b/.travis.yml
@@ -54,7 +54,7 @@ script:
   - pod --version
   - scripts/prep_all
   - travis_wait scripts/build_all --verbose
-  - travis_wait travis_retry scripts/test_all catalog/MDCCatalog.xcworkspace:MDCUnitTests
+  - travis_wait travis_retry scripts/test_all MDCCatalog.xcworkspace:MDCUnitTests
 
 # Upload our testing coverage to codecov.io.
 after_success:
