Removed unused MDC_DEPRECATION_WARNINGS.

--- a/catalog/MaterialComponentsWarnings.xcconfig
+++ b/catalog/MaterialComponentsWarnings.xcconfig
@@ -13,6 +13,6 @@
 MDC_BASIC_WARNINGS = -Wall -Wextra -Werror
 MDC_EXTRA_WARNINGS = -Wcast-align -Wconversion -Watomic-properties -Wmissing-prototypes -Wnewline-eof -Woverlength-strings -Wshadow-all -Wstrict-selector-match -Wundeclared-selector -Wunreachable-code -Wstrict-prototypes
 MDC_IGNORABLE_WARNINGS = -Wno-error=deprecated -Wno-error=deprecated-implementations
-MDC_DISABLED_WARNINGS = $(MDC_DEPRECATION_WARNINGS) -Wno-partial-availability -Wno-sign-conversion -Wno-unused-parameter
+MDC_DISABLED_WARNINGS = -Wno-partial-availability -Wno-sign-conversion -Wno-unused-parameter
 
 WARNING_CFLAGS = $(inherited) $(MDC_BASIC_WARNINGS) $(MDC_EXTRA_WARNINGS) $(MDC_IGNORABLE_WARNINGS) $(MDC_DISABLED_WARNINGS)
