--- a/catalog/MaterialComponentsWarnings.xcconfig
+++ b/catalog/MaterialComponentsWarnings.xcconfig
@@ -6,10 +6,11 @@
 // * Our basic warnings cover most things and make warnings into errors.
 // * If a warning is (transitively) enabled by our basic warnings, do not include it separately.
 // * For warnings not enabled by our basic warnings, add them to the extra warnings.
-// * To change a warning-as-error into just a warning, add it to the ignorable warnings.
-// * To disable a warning completely, add it to the disabled warnings. 
+// * To change a warning-as-error into just a warning, add it to the ignorable warnings using the
+//   format `-Wno-error=<warning>`.
+// * To disable a warning completely, add it to the disabled warnings using the format
+//   `-Wno-<warning>`.
 //
-
 MDC_BASIC_WARNINGS = -Wall -Wextra -Werror
 MDC_EXTRA_WARNINGS = -Wcast-align -Wconversion -Watomic-properties -Wmissing-prototypes -Wnewline-eof -Woverlength-strings -Wshadow-all -Wstrict-selector-match -Wundeclared-selector -Wunreachable-code -Wstrict-prototypes
 MDC_IGNORABLE_WARNINGS = -Wno-error=deprecated -Wno-error=deprecated-implementations
