--- a/catalog/MaterialComponentsWarnings.xcconfig
+++ b/catalog/MaterialComponentsWarnings.xcconfig
@@ -12,7 +12,7 @@
 //   `-Wno-<warning>`.
 //
 MDC_BASIC_WARNINGS = -Wall -Wextra -Werror
-MDC_EXTRA_WARNINGS = -Wcast-align -Wconversion -Watomic-properties -Wmissing-prototypes -Wnewline-eof -Woverlength-strings -Wshadow-all -Wstrict-selector-match -Wundeclared-selector -Wunreachable-code -Wstrict-prototypes
+MDC_EXTRA_WARNINGS = -Wcast-align -Wconversion -Watomic-properties -Wmissing-prototypes -Wnewline-eof -Woverlength-strings -Wshadow -Wstrict-selector-match -Wundeclared-selector -Wunreachable-code -Wstrict-prototypes
 MDC_IGNORABLE_WARNINGS = -Wno-error=deprecated -Wno-error=deprecated-implementations
 MDC_DISABLED_WARNINGS = -Wno-partial-availability -Wno-sign-conversion -Wno-unused-parameter
 
