Making globs more explicit

--- a/components/ButtonBar/BUILD
+++ b/components/ButtonBar/BUILD
@@ -36,7 +36,7 @@ mdc_public_objc_library(
 
 mdc_objc_library(
     name = "ColorThemer",
-    srcs = native.glob(["src/ColorThemer/*"]),
+    srcs = native.glob(["src/ColorThemer/*.m"]),
     hdrs = native.glob(["src/ColorThemer/*.h"]),
     includes = ["src/ColorThemer"],
     sdk_frameworks = [
@@ -67,9 +67,9 @@ package_group(
 mdc_objc_library(
     name = "unit_test_sources",
     testonly = 1,
-    srcs = glob([
+    srcs = native.glob([
         "tests/unit/*.m",
-        "tests/unit/*.h"
+        "tests/unit/*.h",
     ]),
     sdk_frameworks = [
         "UIKit",
@@ -85,7 +85,7 @@ mdc_objc_library(
 
 swift_library(
     name = "unit_test_swift_sources",
-    srcs = glob(["tests/unit/*.swift"]),
+    srcs = native.glob(["tests/unit/*.swift"]),
     deps = [
         ":ButtonBar",
         ":ColorThemer",
