--- a/components/ProgressView/BUILD
+++ b/components/ProgressView/BUILD
@@ -27,6 +27,7 @@ mdc_public_objc_library(
         "UIKit",
     ],
     deps = [
+        "//components/Palettes",
         "//components/private/Math",
         "@material_internationalization_ios//:MDFInternationalization",
         "@motion_animator_objc//:MotionAnimator",
