Fixing visibility in ButtonBar

--- a/components/ButtonBar/BUILD
+++ b/components/ButtonBar/BUILD
@@ -53,7 +53,7 @@ mdc_objc_library(
     name = "private",
     hdrs = native.glob(["src/private/*.h"]),
     includes = ["src/private"],
-    visibility = [":test_targets"],
+    visibility = ["//visibility:private"],
 )
 
 mdc_objc_library(
